        - Fix multiple edge cases of complex prefetch combining incorrectly
          with correlated subquery selections
        - Fix multiple edge cases stemming from interaction of a non-selecting
          order_by specification and distinct and/or complex prefetch
        - Fix unbound growth of a resultset during repeated execute/exhaust
          cycles (GHPR#29)
        - Clarify ambiguous behavior of distinct when used with ResultSetColumn
          i.e. $rs->search({}, { distinct => 1 })->get_column (...)
        - Setting quote_names propagates to SQL::Translator when producing
          SQLite DDL (it is one of the few producers *NOT* quoting by default)
        - Fix incorrect binding of large integers on old versions of
          DBD::SQLite (now DBIC simply always binds SQLite ints as BIGINT)
        - Silence (harmless) warnings on recent DBD::SQLite versions, when
          inserting/updating large integers on 32bit ivsize systems (RT#76395)
        - Back out self-cleaning from DBIx::Class::Carp for the time being
          (as a side effect fixes RT#86267)
        - Fix incorrect internal use of implicit list context in copy()
        - Fix 0.08250 regression in driver determination when DBI_DSN is used
        - Tests no longer fail if $ENV{DBI_DSN} is set
        - Throw clearer exception on ->new_related() with a non-existent
          relationship
        - Fix incorrect parethesis unroll with multicolumn in, (never noticed
          before fixing false positive in SQLA::Test 1.77)
        - Fix t/storage/replicated.t class loading problem
        - Stop using the deprecated Class::MOP::load_class()
        - Fix warning in t/54taint.t with explicitly unset PERL5LIB (RT#91972)

    * Misc
        - Massive incompatible change of ::BlockRunner internals (was never
          documented as usable externally, this last set of changes settles
          the design for proper documentation and opening up)